# AGI-feeder-integerated-system

./: .gitignore  Cargo.toml  GITHUB_ISSUES.md  README.md
crates/app/: Cargo.toml
crates/app/src/: bootstrap.rs  lib.rs  main.rs  middleware.rs  router.rs  state.rs
crates/app/src/middleware/: auth.rs  logging.rs  rbca.rs  tenant.rs
crates/cores/: Cargo.toml
crates/cores/src/: app_error.rs  db_error.rs  error.rs  lib.rs
crates/domains/: mod.rs
crates/domains/assets/: Cargo.toml
crates/domains/assets/src/: dto.rs  handler.rs  lib.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/audit/: Cargo.toml
crates/domains/audit/src/: handler.rs  lib.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/auth/: Cargo.toml
crates/domains/auth/src/: dto.rs  error.rs  handler.rs  mod.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/finance/: Cargo.toml
crates/domains/finance/src/: error.rs  lib.rs  mod.rs  router.rs
crates/domains/finance/src/invoice/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/finance/src/ledger/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/finance/src/payment/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/organization/: Cargo.toml
crates/domains/organization/src/: error.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/pms/: Cargo.toml
crates/domains/pms/src/: error.rs  lib.rs  router.rs
crates/domains/pms/src/lease/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/pms/src/maintenance/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/pms/src/property/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/pms/src/tenant/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/pms/src/unit/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rbac/: Cargo.toml
crates/domains/rbac/src/: error.rs  handler.rs  lib.rs  mapper.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rems/: Cargo.toml  router.rs
crates/domains/rems/src/: error.rs  lib.rs  mod.rs  router.rs
crates/domains/rems/src/client/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rems/src/commission/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rems/src/deal/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rems/src/listing/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rms/: Cargo.toml
crates/domains/rms/src/: error.rs  lib.rs  router.rs
crates/domains/rms/src/inventory/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rms/src/menu/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rms/src/order/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rms/src/restaurant/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/rms/src/stock/: dto.rs  handler.rs  model.rs  repository.rs  router.rs  service.rs
crates/domains/users/: Cargo.toml
crates/domains/users/src/: dto.rs  error.rs  handler.rs  lib.rs  model.rs  repository.rs  router.rs  service.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs  postgres_audit_repository.rs  postgres_auth_repository.rs  postgres_client_repository.rs  postgres_invoice_repository.rs  postgres_ledger_repository.rs  postgres_listing_repository.rs  postgres_org_repository.rs  postgres_payment_repository.rs  postgres_pms_repository.rs  postgres_rbac_repository.rs  postgres_rems_repository.rs  postgres_rms_repository.rs  postgres_user_repository.rs  repository_pg.rs
crates/shared/: Cargo.toml
crates/shared/src/: extractors.rs  lib.rs  pagination.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/testing/src/mocks/: audit.rs  mod.rs
crates/testing/src/tests/: api_coverage_tests.rs  audit_tests.rs  mod.rs  model_tests.rs
docs/: EXPLANATION.md  HOW-TO.md  REFERENCE.md  TUTORIALS.md
migrations/: 001_create_organizations.sql  002_create_users.sql  003_create_user_permissions.sql  004_create_assets.sql  005_create_rems.sql  007_create_finance.sql  008_add_soft_deletes.sql  009_create_advanced_rbac.sql  010_create_audit.sql  011_create_pms.sql  012_create_rms.sql  013_create_rems_deals.sql
