[workspace]
resolver = "2"

members = [
    "crates/app",
    "crates/cores",
    "crates/infra",
    "crates/shared",

    "crates/domains/auth",
    "crates/domains/users",
    "crates/domains/rbac",
    "crates/domains/organization",
    "crates/domains/assets",
    "crates/domains/finance",
    "crates/domains/pms",
    "crates/domains/rems",
    "crates/domains/rms",

    "crates/testing"
]
[workspace.dependencies]
axum = "0.7.9" 
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1.89"