[workspace]
resolver = "2"

members = [
    "crates/app",
    "crates/cores",
    "crates/infra",
    "crates/shared",

    "crates/domains/auth",
    "crates/domains/users",
    "crates/domains/rbac",
    "crates/domains/organization",
    "crates/domains/assets",
    "crates/domains/finance",
    "crates/domains/pms",
    "crates/domains/rems",
    "crates/domains/rms",

    "crates/testing"
]

[workspace.dependencies]
axum         = "0.7.9"
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1.0",  features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2.0"
uuid         = { version = "1.11", features = ["v4", "serde"] }
chrono       = { version = "0.4",  features = ["serde"] }
async-trait  = "0.1.89"
argon2       = "0.5"
rand_core    = { version = "0.6",  features = ["getrandom"] }
sqlx         = { version = "0.8",  features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "rust_decimal"] }
validator    = { version = "0.19", features = ["derive"] }
dotenvy      = "0.15"
rust_decimal = { version = "1",    features = ["serde-float"] }
jsonwebtoken = "9"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http   = { version = "0.5",  features = ["trace"] }