[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }

cores = { path = "../cores" }
shared = { path = "../shared" }
infra = { path = "../infra" }

auth = { path = "../domains/auth" }
users = { path = "../domains/users" }
rbac = { path = "../domains/rbac" }
organization = { path = "../domains/organization" }
assets = { path = "../domains/assets" }
finance = { path = "../domains/finance" }
pms = { path = "../domains/pms" }
rems = { path = "../domains/rems" }
rms = { path = "../domains/rms" }

