[package]
name    = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum       = { workspace = true }
tokio      = { workspace = true }
sqlx       = { workspace = true }
dotenvy    = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }

cores  = { path = "../cores" }
shared = { path = "../shared" }
infra  = { path = "../infra" }

auth         = { path = "../domains/auth" }
users        = { path = "../domains/users" }
rbac         = { path = "../domains/rbac" }
organization = { path = "../domains/organization" }
assets       = { path = "../domains/assets" }
finance      = { path = "../domains/finance" }
pms          = { path = "../domains/pms" }
rems         = { path = "../domains/rems" }
rms          = { path = "../domains/rms" }
audit        = { path = "../domains/audit" }
