[package]
name    = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
cores        = { path = "../cores" }
shared       = { path = "../shared" }
# domain crates that infra implements traits for:
auth         = { path = "../domains/auth" }
users        = { path = "../domains/users" }
rbac         = { path = "../domains/rbac" }
organization = { path = "../domains/organization" }
assets       = { path = "../domains/assets" }
rems         = { path = "../domains/rems" }
pms          = { path = "../domains/pms" }
rms          = { path = "../domains/rms" }
finance      = { path = "../domains/finance" }
audit        = { path = "../domains/audit" }
# infra-level deps:
thiserror    = { workspace = true }
sqlx         = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
rust_decimal = { workspace = true }
serde_json   = { workspace = true }
