[package]
name    = "rbac"
version = "0.1.0"
edition = "2021"

[dependencies]
cores       = { path = "../../cores" }
shared      = { path = "../../shared" }
serde       = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
axum        = { workspace = true }
async-trait = { workspace = true }
serde_json  = { workspace = true }