[package]
name    = "rems"
version = "0.1.0"
edition = "2021"

[dependencies]
cores        = { path = "../../cores" }
shared       = { path = "../../shared" }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
axum         = { workspace = true }
rust_decimal = { workspace = true }
