[package]
name    = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
cores       = { path = "../../cores" }
shared      = { path = "../../shared" }
serde       = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
async-trait = { workspace = true }
argon2      = { workspace = true }
rand_core   = { workspace = true }
axum        = { workspace = true }
tokio       = { workspace = true }
validator   = { workspace = true }